--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Final project template: HTML</title>
+		<title>Ticket Sales vs. Time</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" type="text/css" href="final.css">
-		<!-- Google font: Times New Roman -->
-		
+
+			<!-- Google font: Oswald -->
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 	</head>
 		
 	<body>
@@ -20,8 +23,9 @@
 			<h4>Austin Raiche </h4>
 		</section>
 		<section>
-			<h3><img></h3>
+			<h3>subhead1</h3>
 			<!-- Add image below this comment -->
+
 			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
