--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!-- This is the completed HTML page for our final project template. -->
 
+<!-- In the final.css, I brought the font size of my footer down to 15px. I didn't like that it was the same font size as the text directly above it. Since it isn't as important, I didn't want it to distract from the more critical information -->
+
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -26,7 +29,7 @@
 			<h3>subhead1</h3>
 			<!-- Add image below this comment -->
 
-			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
+			<img src="newhouse.jpg" ALT="Newhouse" height=300px width = 400px>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
