--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			proident, punt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<div class="footer">
-			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Times New Roman, Serif.</p>
+			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Oswald, Times New Roman, Serif, Sans Serif.</p>
 
 		</div>
 	</body>
