--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
              <!-- Replace with your own photo; Update ALT --> 
 
-              <img src="portfolio.jpg" alt="Your Name photo" width="400" height="400">
+              <img src="headshot.jpg" alt="Austin Raiche" width="300" height="375">
 
               <!-- Update Photographer Name -->
 
-              <div class="caption">Photo: Photographer Name</div>
+              <div class="caption">Photo: Cara Richard</div>
 
             </div>
 
