--- a/index.html
+++ b/index.html
@@ -1,97 +1,70 @@
-<!doctype html>
+<!-- This is the completed HTML page for our final project template. -->
+
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
+	<head>
+		<title>Final project template: HTML</title>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="final.css">
+		<!-- Google font: Times New Roman -->
+		
+	</head>
+		
+	<body>
+		<section class="header">
+			<h1> Ticket Sales vs. Time </h1>
+			<h2> MLB History</h2>
+			<h4>Austin Raiche </h4>
+		</section>
+		<section>
+			<h3><img></h3>
+			<!-- Add image below this comment -->
+			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</section>
+		<section>
+			<h3>This is another subhed</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</section>
+		<section>
+			<div class="list">
+				<h2>Top refugee cities in the U.S.</h2>
+				<ul>
+					<li>Chicago</li>
+					<li>Phoenix</li>
+					<li>Houston</li>
+					<li>Boston</li>
+				</ul>
+			</div>
 
-    <link rel="stylesheet" href="portfolio.css">
+			<!-- Add responsive Datawrapper element below this comment. -->
+			<iframe title="MLB Total Yearly Attendance" aria-label="Line chart" id="datawrapper-chart-JzvQZ" src="https://datawrapper.dwcdn.net/JzvQZ/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="440" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
+		</section>
+		<section>
+			<h3>This is my final subhed</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, punt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</section>
+		<div class="footer">
+			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Times New Roman, Serif.</p>
 
-    <title>Your Name Github Portfolio Site</title>
-
-    <!--Additional Google Font: Arimo -->
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-
-
-  </head>
-  <body>
-
-    <div class="container">
-
-      <div class="row">
-
-        <header class="col bg-secondary text-white p-2 mb-4">
-          <h3>Newhouse School at Syracuse University</h3>
-        </header>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-lg-1">
-
-  
-            <div class="mainimage">
-
-             <!-- Replace with your own photo; Update ALT --> 
-
-              <img src="headshot.jpg" alt="Austin Raiche" width="300" height="375">
-
-              <!-- Update Photographer Name -->
-
-              <div class="caption">Photo: Cara Richard</div>
-
-            </div>
-
-          <h1>Your Name</h1>
-
-          <h2>Digital journalist</h2>
-
-          <p><em>A selection of work from the Foundations of Data & Digital Journalism course</em></p>
-
-          <!-- Update with Description about Final Project --> 
-
-          <h3>Coming Soon</h3>
-
-
-          <p>Using data from the Source Name, a <a href="/final/">look at a topic</a> and detail about a finding that would be of interest to your viewers. 
-          </p>
-
-
-          <h3>More of My Work</h3>
-
-         <!-- Add links to clips, non-class work --> 
-
-          <ul>
-            <li> <a href="https://www.occupancy250.com" target="_blank"><em>Occupancy 250: Fans, Bands and Fried Chicken</em></a></li>
-            <li> <a href="https://www.linkedin.com/in/jonnglass/" target="_blank">LinkedIn Profile</a></li>
-            <li><a href="https://www.jonnglass.com" target="_blank">Portfolio Site</a></li>
-          </ul>
-
-          <h3>Contact Me</h3>
-          <!-- Update to Your Email Address --> 
-
-          <ul>
-            <li> <a href="mailto:yourname@syr.edu?Subject=Inquiry from my Github site">yourname@syr.edu</a></li>
-          </ul>
-
-        </div>
-
-      </div>
-
-    <div class="footer">
-
-
-      <p>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Your Name</p>
-    </div>
-
-
-
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  </body>
+		</div>
+	</body>
 </html>
