--- a/final/final/index.html
+++ b/final/final/index.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Ticket Sales vs. Time</title>
+		<title>Economics Behind MLB's Recovery from COVID </title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
