--- a/final/final/index.html
+++ b/final/final/index.html
@@ -1,35 +1,28 @@
 <!-- This is the completed HTML page for our final project template. -->
 
-<!-- In the final.css, I brought the font size of my footer down to 15px. I didn't like that it was the same font size as the text directly above it. Since it isn't as important, I didn't want it to distract from the more critical information -->
-
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Economics Behind MLB's Recovery from COVID </title>
+		<title>Final project template: HTML</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" type="text/css" href="final.css">
-
-			<!-- Google font: Oswald -->
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+		<!-- Google font: Times New Roman -->
+		
 	</head>
 		
 	<body>
 		<section class="header">
-			<h1> Ticket Sales vs. Time </h1>
+			<h1> Economics Behind MLB's Recovery from COVID </h1>
 			<h2> MLB History</h2>
 			<h4>Austin Raiche </h4>
 		</section>
 		<section>
-			<h3>subhead1</h3>
+			<h3><img></h3>
 			<!-- Add image below this comment -->
-
-			<img src="newhouse.jpg" ALT="Newhouse" height=300px width = 400px>
+			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -70,7 +63,7 @@
 			proident, punt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<div class="footer">
-			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Oswald, Times New Roman, Serif, Sans Serif.</p>
+			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Times New Roman, Serif.</p>
 
 		</div>
 	</body>
