--- a/final/index.html
+++ b/final/index.html
@@ -15,7 +15,7 @@
 		
 	<body>
 		<section class="header">
-			<h1> Ticket Sales vs. Time </h1>
+			<h1> Economics Behind MLB's Recovery from COVID </h1>
 			<h2> MLB History</h2>
 			<h4>Austin Raiche </h4>
 		</section>
