--- a/final/index.html
+++ b/final/index.html
@@ -15,8 +15,8 @@
 		
 	<body>
 		<section class="header">
-			<h1> MLB's Recovery from COVID </h1>
-			<h2> Economic Lesson Behind the Attendance Revival</h2>
+			<h1> Economics Behind MLB's Recovery from COVID </h1>
+			<h2> </h2>
 			<h4>Austin Raiche </h4>
 		</section>
 		<section>
