--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="portfolio.css">
 
-    <title>Your Name Github Portfolio Site</title>
+    <title>Austin Raiche Github Portfolio Site</title>
 
     <!--Additional Google Font: Arimo -->
 
@@ -46,7 +46,7 @@
 
             </div>
 
-          <h1>Your Name</h1>
+          <h1>Austin Raiche</h1>
 
           <h2>Digital journalist</h2>
 
@@ -57,7 +57,7 @@
           <h3>Coming Soon</h3>
 
 
-          <p>Using data from the Source Name, a <a href="/final/">look at a topic</a> and detail about a finding that would be of interest to your viewers. 
+          <p>Using data from the Baseball Reference, a <a href="/final/">look at MLB ticket sales</a> and how the league rebounded from the COVID pandemic 
           </p>
 
 
