--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
           <ul>
             <li> <a href="https://www.occupancy250.com" target="_blank"><em>Occupancy 250: Fans, Bands and Fried Chicken</em></a></li>
-            <li> <a href="https://www.linkedin.com/in/jonnglass/" target="_blank">LinkedIn Profile</a></li>
+            <li> <a href="https://www.linkedin.com/in/austinraiche/" target="_blank">LinkedIn Profile</a></li>
             <li><a href="https://www.jonnglass.com" target="_blank">Portfolio Site</a></li>
           </ul>
 
