--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h3>Coming Soon</h3>
 
 
-          <p>Using data from the Baseball Reference, a <a href="/final/">look at MLB ticket sales</a> and how the league rebounded from the COVID pandemic 
+          <p>Using data from the Baseball Reference, a <a href="/final/">look at a MLB ticket sales</a> and strategies the league used to rebound from the COVID pandemic. 
           </p>
 
 
@@ -66,16 +66,15 @@
          <!-- Add links to clips, non-class work --> 
 
           <ul>
-            <li> <a href="https://www.occupancy250.com" target="_blank"><em>Occupancy 250: Fans, Bands and Fried Chicken</em></a></li>
+            <li> <a href="https://www.youtube.com/watch?v=3qj-2Uv9zQU" target="_blank"><em>Lexington High School Boys Basketball 2024 Senior Night Broadcast</em></a></li>
             <li> <a href="https://www.linkedin.com/in/austinraiche/" target="_blank">LinkedIn Profile</a></li>
-            <li><a href="https://www.jonnglass.com" target="_blank">Portfolio Site</a></li>
-          </ul>
+            
 
           <h3>Contact Me</h3>
           <!-- Update to Your Email Address --> 
 
           <ul>
-            <li> <a href="mailto:yourname@syr.edu?Subject=Inquiry from my Github site">yourname@syr.edu</a></li>
+            <li> <a href="mailto:yourname@syr.edu?Subject=Inquiry from my Github site">apraiche@syr.edu</a></li>
           </ul>
 
         </div>
