--- a/final/index.html
+++ b/final/index.html
@@ -23,12 +23,8 @@
 			<h3><img></h3>
 			<!-- Add image below this comment -->
 			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<p> For a large portion of the 2010s, MLB attendance was on a downward slope. When the league delayed its season due to the COVID-19 pandemic in March 2020, concerns that stadiums may never return to their full capacities only increased. However, MLB is no longer defined by those worries over five years later. Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, it’s undergone a steady comeback as a result of the league’s economic situation, changes in rules, and focus on the fan experience. 
+</p>
 		</section>
 		<section>
 			<h3>This is another subhed</h3>
