--- a/final/index.html
+++ b/final/index.html
@@ -24,9 +24,12 @@
 			<!-- Add image below this comment -->
 			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
 			<p> For a large portion of the 2010s, MLB attendance was on a downward slope. 
-				When the league delayed its season due to the COVID-19 pandemic in March 2020, concerns that stadiums may never return to their full capacities only increased. 
-				However, MLB is no longer defined by those worries over five years later. Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, 
-				it’s undergone a steady comeback as a result of the league’s economic situation, changes in rules, and focus on the fan experience.</p>
+				When the league delayed its season due to the COVID-19 pandemic in March 2020, 
+				concerns that stadiums may never return to their full capacities only increased. 
+				However, MLB is no longer defined by those worries over five years later. 
+				Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, 
+				it’s undergone a steady comeback as a result of the league’s economic situation, 
+				changes in rules, and focus on the fan experience.</p>
 		</section>
 		<section>
 			<h3>This is another subhed</h3>
