--- a/final/index.html
+++ b/final/index.html
@@ -32,13 +32,9 @@
 				changes in rules, and focus on the fan experience.</p>
 		</section>
 		<section>
-			<h3>This is another subhed</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h3>Why Hasn't the Recovery Been Fast?</h3>
+			<p>Research gives an explanation as to why MLB’s recovery in attendance has been gradual rather than rapid. In “The Impact of COVID-19 on Fan Attendance To Sports Events: The Case of Major League Baseball,” researcher Alondra Aleman concluded that the effects of COVID had a lasting impact on the behavior of MLB fans. Even after numerous health restrictions were removed, many fans still hesitated to return due to remaining concerns for their health and economic concerns. The research noted that attendance typically drops after significant events like pandemics or recession. This usually lasts for more time in baseball due to larger venues and longer seasons.
+Moonsop Hyun, an assistant professor at the University of Louisville and researcher of sports analytics and economics, claimed that the country’s economic status is one of the primary factors in influencing MLB’s attendance. “Attendance dropped sharply in 2009 right after the 2008 financial crisis,” he stated before comparing it to the pandemic. “After COVID in 2020 attendance also did not recover right away. I still think the MLB is in a recovery process.” People willing to return to stadiums had to deal with extra factors like inflation and increased living costs. This made the discretionary spending on baseball tickets less predictable.</p>
 		</section>
 		<section>
 			<div class="list">
