--- a/final/final/index.html
+++ b/final/final/index.html
@@ -16,35 +16,39 @@
 	<body>
 		<section class="header">
 			<h1> Economics Behind MLB's Recovery from COVID </h1>
-			<h2> MLB History</h2>
+			<h2> </h2>
 			<h4>Austin Raiche </h4>
 		</section>
 		<section>
 			<h3><img></h3>
 			<!-- Add image below this comment -->
 			<img src="newhouse.jpg" ALT = Newhouse height=300px width = 400px>
-			<p> For a large portion of the 2010s, MLB attendance was on a downward slope. When the league delayed its season due to the COVID-19 pandemic in March 2020, concerns that stadiums may never return to their full capacities only increased. However, MLB is no longer defined by those worries over five years later. Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, it’s undergone a steady comeback as a result of the league’s economic situation, changes in rules, and focus on the fan experience.
- </p>
+			<p> For a large portion of the 2010s, MLB attendance was on a downward slope. 
+				When the league delayed its season due to the COVID-19 pandemic in March 2020, 
+				concerns that stadiums may never return to their full capacities only increased. 
+				However, MLB is no longer defined by those worries over five years later. 
+				Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, 
+				it’s undergone a steady comeback as a result of the league’s economic situation, 
+				changes in rules, and focus on the fan experience.</p>
 		</section>
 		<section>
-			<h3>This is another subhed</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h3>Why Hasn't the Recovery Been Fast?</h3>
+			<p>Research gives an explanation as to why MLB’s recovery in attendance has been gradual rather than rapid. 
+			   In “The Impact of COVID-19 on Fan Attendance To Sports Events: The Case of Major League Baseball,” researcher Alondra Aleman concluded 
+				that the effects of COVID had a lasting impact on the behavior of MLB fans. Even after numerous health 
+				restrictions were removed, many fans still hesitated to return due to remaining concerns for their health and economic concerns. 
+				The research noted that attendance typically drops after significant events like pandemics or recession. 
+				This usually lasts for more time in baseball due to larger venues and longer seasons.
+                Moonsop Hyun, an assistant professor at the University of Louisville and researcher of sports analytics and economics, 
+				claimed that the country’s economic status is one of the primary factors in influencing MLB’s attendance. 
+				“Attendance dropped sharply in 2009 right after the 2008 financial crisis,” he stated before comparing it to the pandemic. 
+				“After COVID in 2020 attendance also did not recover right away. I still think the MLB is in a recovery process.” 
+				People willing to return to stadiums had to deal with extra factors like inflation and increased living costs. 
+				This made the discretionary spending on baseball tickets less predictable.</p>
 		</section>
 		<section>
-			<div class="list">
-				<h2>Top refugee cities in the U.S.</h2>
-				<ul>
-					<li>Chicago</li>
-					<li>Phoenix</li>
-					<li>Houston</li>
-					<li>Boston</li>
-				</ul>
-			</div>
+				<p> Text</p>
+				
 
 			<!-- Add responsive Datawrapper element below this comment. -->
 			<iframe title="MLB Total Yearly Attendance" aria-label="Line chart" id="datawrapper-chart-JzvQZ" src="https://datawrapper.dwcdn.net/JzvQZ/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="440" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
