--- a/final/index.html
+++ b/final/index.html
@@ -47,15 +47,8 @@
 				This made the discretionary spending on baseball tickets less predictable.</p>
 		</section>
 		<section>
-			<div class="list">
-				<h2>Top refugee cities in the U.S.</h2>
-				<ul>
-					<li>Chicago</li>
-					<li>Phoenix</li>
-					<li>Houston</li>
-					<li>Boston</li>
-				</ul>
-			</div>
+				<p> Text</p>
+				
 
 			<!-- Add responsive Datawrapper element below this comment. -->
 			<iframe title="MLB Total Yearly Attendance" aria-label="Line chart" id="datawrapper-chart-JzvQZ" src="https://datawrapper.dwcdn.net/JzvQZ/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="440" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
@@ -70,7 +63,7 @@
 			proident, punt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<div class="footer">
-			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Times New Roman, Serif.</p>
+			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University</p>
 
 		</div>
 	</body>
