--- a/final/index.html
+++ b/final/index.html
@@ -47,7 +47,25 @@
 				This made the discretionary spending on baseball tickets less predictable.</p>
 		</section>
 		<section>
-				<p> Text</p>
+					<h2>What Changes Were Made to Increase Ticket Sales?</h2>
+				<p> The COVID virus also came at a time when the sport’s popularity was in question. 
+					According to Hyun, both attendance and popularity decreased from 2015-2019, and people thought MLB was “experiencing a serious crisis.” 
+					Hyun claims that the league’s recovery in attendance must also be partially attributed to the rule changes within the game to address the aforementioned issue.
+					MLB introduced a pitch clock in 2023, which cut average game times down from three hours and eleven minutes in 2021 to just two hours and 40 minutes in 2025. 
+					By shortening play, the live experience improved for fans, who had to sit through less dead ball time. 
+
+				<section>
+                
+                The pitch clock was just one addition by MLB to prioritize in-person watchability. Bigger bases allowed players to record more steals, 
+					and regulations on defensive shifts allowed for more offense, which increased the game’s popularity. While these changes didn’t rapidly increase attendance, 
+					they did so at a satisfactory rate for MLB.
+                <section>
+
+	           <p> Another reason for MLB’s attendance revival has been credited to the league’s pricing strategies. 
+				   MLB largely held back from heavily increasing ticket prices after the pandemic, unlike other industries. 
+				   “MLB has been lowering ticket prices in recent years. … lower ticket prices generally increase attendance” Hyun said. 
+				   Aleman’s study also corroborates this, claiming that affordability was a key factor in determining 
+				   whether or not fans felt comfortable returning to ballparks. <p>
 				
 
 			<!-- Add responsive Datawrapper element below this comment. -->
