--- a/final/index.html
+++ b/final/index.html
@@ -66,6 +66,21 @@
 				   “MLB has been lowering ticket prices in recent years. … lower ticket prices generally increase attendance” Hyun said. 
 				   Aleman’s study also corroborates this, claiming that affordability was a key factor in determining 
 				   whether or not fans felt comfortable returning to ballparks. <p>
+
+                <section>
+	           
+	              Another key factor that contributed to the return of fans has been the popularity of star players. 
+					Hyun noted that research shows fan turnout increases when a team has a superstar player. 
+					Athletes like Shohei Ohtani and Aaron Judge have drawn league-wide interest, attracting fans from local markets and other cities,
+					increasing attendance at home and road games. 
+
+	           <section>
+
+	           <p> While some people may blame streaming services and other virtual-viewing options for a decline in attendance,
+				   research shows they actually have a minimal impact. As Hyun put it “Streaming services are not a major issue because watching MLB 
+				   still requires subscriptions in many cases. Ticket prices have remained relatively stable.” Although consumption has changed recently, 
+				   going to a live game still has a special feel for many fans, especially when teams focus on stadium entertainment and other promotional factors. <p>
+		
 				
 
 			<!-- Add responsive Datawrapper element below this comment. -->
