--- a/final/index.html
+++ b/final/index.html
@@ -56,7 +56,7 @@
 
 	           <section>
 	           
-	           Another key factor that contributed to the return of fans has been the popularity of star players. Hyun noted that research shows fan turnout increases when a team has a superstar player. Athletes like Shohei Ohtani and Aaron Judge have drawn league-wide interest, attracting fans from local markets and other cities, increasing attendance at home and road games. 
+	           <p> Another key factor that contributed to the return of fans has been the popularity of star players. Hyun noted that research shows fan turnout increases when a team has a superstar player. Athletes like Shohei Ohtani and Aaron Judge have drawn league-wide interest, attracting fans from local markets and other cities, increasing attendance at home and road games. 
 
 	           <section>
 
