--- a/final/index.html
+++ b/final/index.html
@@ -15,8 +15,8 @@
 		
 	<body>
 		<section class="header">
-			<h1> Economics Behind MLB's Recovery from COVID </h1>
-			<h2> </h2>
+			<h1> New Rules, New Prices, New Players </h1>
+			<h2> How MLB Ticket Sales Rebounded from COVID </h2>
 			<h4>Austin Raiche </h4>
 		</section>
 		<section>
@@ -43,6 +43,7 @@
 				People willing to return to stadiums had to deal with extra factors like inflation and increased living costs. 
 				This made the discretionary spending on baseball tickets less predictable.<p>
 		</section>
+		<iframe title="MLB Total Yearly Attendance" aria-label="Line chart" id="datawrapper-chart-JzvQZ" src="https://datawrapper.dwcdn.net/JzvQZ/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="440" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
 		<section>
 				<h2>What Changes Were Made to Increase Ticket Sales?</h2>
 				<p> The COVID virus also came at a time when the sport’s popularity was in question. According to Hyun, both attendance and popularity decreased from 2015-2019, and people thought MLB was “experiencing a serious crisis.” Hyun claims that the league’s recovery in attendance must also be partially attributed to the rule changes within the game to address the aforementioned issue. MLB introduced a pitch clock in 2023, which cut average game times down from three hours and eleven minutes in 2021 to just two hours and 40 minutes in 2025. By shortening play, the live experience improved for fans, who had to sit through less dead ball time. 
@@ -56,7 +57,7 @@
 
 	           <section>
 	           
-	           <p> Another key factor that contributed to the return of fans has been the popularity of star players. Hyun noted that research shows fan turnout increases when a team has a superstar player. Athletes like Shohei Ohtani and Aaron Judge have drawn league-wide interest, attracting fans from local markets and other cities, increasing attendance at home and road games. 
+	           One key factor that also contributed to the return of fans has been the popularity of star players. Hyun noted that research shows fan turnout increases when a team has a superstar player. Athletes like Shohei Ohtani and Aaron Judge have drawn league-wide interest, attracting fans from local markets and other cities, increasing attendance at home and road games. 
 
 	           <section>
 
@@ -65,16 +66,14 @@
 			</div>
 
 			<!-- Add responsive Datawrapper element below this comment. -->
-			<iframe title="MLB Total Yearly Attendance" aria-label="Line chart" id="datawrapper-chart-JzvQZ" src="https://datawrapper.dwcdn.net/JzvQZ/6/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="440" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
+			<iframe title="MLB Total Yearly Attendance" aria-label="Line chart" id="datawrapper-chart-JzvQZ" src="https://datawrapper.dwcdn.net/BeypY/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="440" data-external="1"></iframe><script type="text/javascript">window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r,i=0;r=e[i];i++)if(r.contentWindow===a.source){var d=a.data["datawrapper-height"][t]+"px";r.style.height=d}}});</script>
 		</section>
 		<section>
-			<h3>This is my final subhed</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, punt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h3>Other Considerations and Final Takeaways</h3>
+			<p>Filling every seat isn’t MLB’s only concern. As Hyun put it, “MLB teams also generally do not focus heavily on maximizing attendance. … Their goal is not to maximize attendance but to maximize profit.” He claimed that some MLB teams increase ticket prices even when attendance decreases in order to increase total revenue. This sheds light onto why today’s attendance numbers are often compared to those from the 2000s, and how other factors typically aren’t considered. While the total number of fans at MLB games was higher in 2008 than in 2025, the league’s comeback plan has been centered around the long-term rather than attendance records. <p>
+			<section>
+	        <p>The recovery from the COVID pandemic has varied from team to team. However, the league’s overall strategy provides a solid economic lesson. MLB’s bounceback wasn’t the result of any single policy or action. It took a combination of factors to revive the popularity of a sport that had dwindled in past years. While the league’s attendance number may not return to their levels from the late 2000s, recent trends show that this isn’t the only way MLB measures its financial success. It has found a balance between fan engagement, economic sustainability, and creating a product that is worth returning to. <p>
+
 		</section>
 		<div class="footer">
 			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Oswald, Times New Roman, Sand-serif, Serif.</p>
