--- a/final/index.html
+++ b/final/index.html
@@ -26,7 +26,7 @@
 			<p>For a large portion of the 2010s, MLB attendance was on a downward slope. When the league delayed its season due to the COVID-19 pandemic in March 2020, concerns that stadiums may never return to their full capacities only increased. However, MLB is no longer defined by those worries over five years later. Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, it’s undergone a steady comeback as a result of the league’s economic situation, changes in rules, and focus on the fan experience.</p>
 		</section>
 		<section>
-			<h3>This is another subhed</h3>
+			<h3>Why the Process Hasn't Been Fast </h3>
 			<p>Research gives an explanation as to why MLB’s recovery in attendance has been gradual rather than rapid. 
 			    In “The Impact of COVID-19 on Fan Attendance To Sports Events: The Case of Major League Baseball,” researcher Alondra Aleman concluded 
 				that the effects of COVID had a lasting impact on the behavior of MLB fans. Even after numerous health 
