--- a/final/index.html
+++ b/final/index.html
@@ -23,6 +23,7 @@
 			<h3><img></h3>
 			<!-- Add image below this comment -->
 			<img src="fenwayy.jpg" ALT = Fenway height=300px width = 400px>
+			<div class="caption">Photo: Maddie Meyer, Getty Images</div>
 			<p>For a large portion of the 2010s, MLB attendance was on a downward slope. When the league delayed its season due to the COVID-19 pandemic in March 2020, concerns that stadiums may never return to their full capacities only increased. However, MLB is no longer defined by those worries over five years later. Although attendance hasn’t reached the same peaks as it did in the mid-late 2000s, it’s undergone a steady comeback as a result of the league’s economic situation, changes in rules, and focus on the fan experience.</p>
 		</section>
 		<section>
