--- a/final/index.html
+++ b/final/index.html
@@ -77,7 +77,7 @@
 
 		</section>
 		<div class="footer">
-			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Oswald, Times New Roman, Sand-serif, Serif.</p>
+			<p>This page was built in Github Pages by Austin Raiche for JNL221 at Syracuse University. Fonts used: Oswald, Times New Roman, Sans-serif, Serif.</p>
 
 		</div>
 	</body>
