--- a/final/index.html
+++ b/final/index.html
@@ -37,7 +37,7 @@
 
 				<section>
 
-                <p>Moonsop Hyun, an assistant professor at the University of Louisville and researcher of sports analytics and economics, 
+                <p>Moonsup Hyun, an assistant professor at the University of Louisville and researcher of sports analytics and economics, 
 				claimed that the country’s economic status is one of the primary factors in influencing MLB’s attendance. 
 				“Attendance dropped sharply in 2009 right after the 2008 financial crisis,” he stated before comparing it to the pandemic. 
 				“After COVID in 2020 attendance also did not recover right away. I still think the MLB is in a recovery process.” 
