--- a/final/index.html
+++ b/final/index.html
@@ -31,7 +31,7 @@
 			<p>Research gives an explanation as to why MLB’s recovery in attendance has been gradual rather than rapid. 
 			    In “The Impact of COVID-19 on Fan Attendance To Sports Events: The Case of Major League Baseball,” researcher Alondra Aleman concluded 
 				that the effects of COVID had a lasting impact on the behavior of MLB fans. Even after numerous health 
-				restrictions were removed, many fans still hesitated to return due to remaining concerns for their health and economic concerns. 
+				restrictions were removed, many fans still hesitated to return due to remaining concerns for their health and economic worries. 
 				The research noted that attendance typically drops after significant events like pandemics or recession. 
 				This usually lasts for more time in baseball due to larger venues and longer seasons. <p>
 
